--- a/index.html
+++ b/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="robots" content="index, follow">
-    <title>You are challenging a developer</title>
-    <meta name="description" content="Access Restricted. You are challenging a developer.">
-    <style>
-        body {
-            background-color: black;
-            color: #0f0; /* Hacker Green */
-            font-family: 'Courier New', Courier, monospace;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-        }
-        h1 { font-size: 2.5rem; }
-        p { font-size: 1.2rem; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>404 Not Found</title>
+  <style>
+    body {
+      background-color: #121212;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 90vh;
+      margin: 0;
+      text-align: center;
+      position: relative;
+      user-select: none;       /* disable text selection */
+    }
+
+    .bg {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      background: url("https://i.postimg.cc/pLF2X0hY/soul-404-error.png") no-repeat center center / cover;
+      opacity: 0.9;
+      z-index: 0;
+      pointer-events: none;    /* block mouse/touch interaction */
+    }
+
+    h1, h2, p {
+      position: relative;
+      z-index: 1;
+    }
+
+    h1 {
+      font-size: 4rem;
+      margin: 0;
+      color: #ff6b6b;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin: 20px 0;
+    }
+
+    p {
+      font-size: 1rem;
+      color: #ccc;
+    }
+  </style>
+  <script>
+    // Disable right-click everywhere
+    document.addEventListener('contextmenu', e => e.preventDefault());
+
+    // Prevent drag/save
+    document.addEventListener('dragstart', e => e.preventDefault());
+  </script>
 </head>
 <body>
-    <div>
-        <h1>⚠️ ACCESS DENIED</h1>
-        <p>You are challenging a developer.</p>
-        <p>This is not the link you are looking for.</p>
-    </div>
+  <div class="bg"></div><br><br><br><br><br><br><br><br><br><br><br>
+  <h1>404 Error</h1>
+  <h2>Oops! Page is Secured.</h2>
+  <p>You are Challenging the Developer, My Friend 😆 Better luck next time.</p>
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"cd571fb1221b40c3984ca6d88b57228e","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 </body>
 </html>
